--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                            <a class="navbar-brand" style="width: 10%;" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -404,7 +404,7 @@
                     <div class="row justify-content-center align-items-center h-100">
                         <div class="col-10 col-sm-5 col-lg-3">
                             <div class="upcomming_war_counter text-center">
-                                <h2>TGS 2024</h2>
+                                <h2>African Game Show</h2>
                                 <div id="timer" class="d-flex justify-content-between">
                                     <div id="days"></div>
                                     <div id="hours"></div>
@@ -579,9 +579,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <div class="copyright_text">
-                                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                                
                             </div>
                         </div>
                         <div class="col-lg-4">
