--- a/fighter.html
+++ b/fighter.html
@@ -1,3 +1,8 @@
+
+
+<!-- SUPPOSED TO BE SPONSORS PAGE -->
+
+
 <!doctype html>
 <html lang="zxx">
 
@@ -47,30 +52,31 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">fighter</a>
+                                        <a class="nav-link" href="fighter.html">Sponsors</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="team.html">team</a>
+                                        <a class="nav-link" href="team.html">Activities</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            Blog
+                                            Tournements
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="blog.html"> blog</a>
-                                            <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                                            <a class="dropdown-item" href="blog.html"> Fifa</a>
+                                            <a class="dropdown-item" href="single-blog.html">Valorant</a>
+                                            <a class="dropdown-item" href="blog.html"> Free Fire</a>
                                         </div>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            pages
+                                            Last Events
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
+                                            <a class="dropdown-item" href="elements.html">TGS 2023</a>
                                         </div>
                                     </li>
                                     <li class="nav-item">
@@ -78,7 +84,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <a href="#" class="btn_1 d-none d-sm-block">Register Now</a>
                         </nav>
                     </div>
                 </div>
@@ -93,7 +99,7 @@
                     <div class="col-lg-12">
                         <div class="breadcrumb_iner text-center">
                             <div class="breadcrumb_iner_item">
-                                <h2>Fighter</h2>
+                                <h2>Sponsors</h2>
                             </div>
                         </div>
                     </div>
@@ -142,7 +148,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
                         <div class="section_tittle text-center">
-                            <h2>All Fighter</h2>
+                            <h2>All Sponsors</h2>
                         </div>
                     </div>
                 </div>
@@ -151,9 +157,9 @@
                         <div class="gallery_part_item">
                             <div class="grid">
                                 <div class="grid-sizer"></div>
-                                <a href="img/gallery/gallery_item_1.png"
+                                <a href="img/client_logo/client_logo_1.png"
                                     class="grid-item bg_img img-gal grid-item--height-1"
-                                    style="background-image: url('img/gallery/gallery_item_1.png')">
+                                    style="background-image: url('img/client_logo/client_logo_1.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -162,8 +168,8 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_2.png" class="grid-item bg_img img-gal"
-                                    style="background-image: url('img/gallery/gallery_item_2.png')">
+                                <a href="img/client_logo/client_logo_2.png" class="grid-item bg_img img-gal"
+                                    style="background-image: url('img/client_logo/client_logo_2.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -172,8 +178,8 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_3.png" class="grid-item bg_img img-gal"
-                                    style="background-image: url('img/gallery/gallery_item_3.png')">
+                                <a href="img/client_logo/client_logo_3.png" class="grid-item bg_img img-gal"
+                                    style="background-image: url('img/client_logo/client_logo_3.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -182,9 +188,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_5.png"
+                                <a href="img/client_logo/client_logo_4.png"
                                     class="grid-item bg_img img-gal grid-item--height-2"
-                                    style="background-image: url('img/gallery/gallery_item_5.png')">
+                                    style="background-image: url('img/client_logo/client_logo_4.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -193,9 +199,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_7.png"
+                                <a href="img/client_logo/client_logo_5.png"
                                     class="grid-item bg_img img-gal grid-item--height-2"
-                                    style="background-image: url('img/gallery/gallery_item_7.png')">
+                                    style="background-image: url('img/client_logo/client_logo_5.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -204,9 +210,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_6.png"
+                                <a href="img/client_logo/client_logo_1.png"
                                     class="grid-item bg_img img-gal grid-item--width-1"
-                                    style="background-image: url('img/gallery/gallery_item_6.png')">
+                                    style="background-image: url('img/client_logo/client_logo_1.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -215,9 +221,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_4.png"
+                                <a href="img/client_logo/client_logo_2.png"
                                     class="grid-item bg_img img-gal sm_weight  grid-item--height-1"
-                                    style="background-image: url('img/gallery/gallery_item_4.png')">
+                                    style="background-image: url('img/client_logo/client_logo_2.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -240,7 +246,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <h2>Upcoming Fighter</h2>
+                            <h2>Upcoming Event</h2>
                         </div>
                     </div>
                 </div>
@@ -248,7 +254,7 @@
                     <div class="row justify-content-center align-items-center h-100">
                         <div class="col-10 col-sm-5 col-lg-3">
                             <div class="upcomming_war_counter text-center">
-                                <h2>Dark Dragon</h2>
+                                <h2>Africa Game Show</h2>
                                 <div id="timer" class="d-flex justify-content-between">
                                     <div id="days"></div>
                                     <div id="hours"></div>
