--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="blog.html"> Fifa</a>
-                                            <a class="dropdown-item" href="blog.html"> Valorant</a>
+                                            <a class="dropdown-item" href="single-blog.html"> Valorant</a>
                                             <a class="dropdown-item" href="blog.html"> Free Fire</a>
                                             
                                         </div>
@@ -431,23 +431,11 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_pricing_part">
                             <p>FOIRE INTERNATIONALE DE SOUSSE</p>
-                            <h3>Samara</h3>
+                            <h3>Tournoi Valorant</h3>
                             <ul>
                                 <li>15 avril - 16 avril</li>
                                 <li>20h30 - 1h00</li>
-                                <li>25dt</li>
-                            </ul>
-                            <a href="#" class="btn_2">BOOK</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="single_pricing_part">
-                            <p>FOIRE INTERNATIONALE DE SOUSSE</p>
-                            <h3>Redstar</h3>
-                            <ul>
-                                <li>16 avril - 17 avril</li>
-                                <li>20h30 - 1h00</li>
-                                <li>25dt</li>
+                                <li>10dt</li>
                             </ul>
                             <a href="#" class="btn_2">BOOK</a>
                         </div>
@@ -456,6 +444,18 @@
                         <div class="single_pricing_part">
                             <p>FOIRE INTERNATIONALE DE SOUSSE</p>
                             <h3>Tournoi FIFA 23</h3>
+                            <ul>
+                                <li>16 avril - 17 avril</li>
+                                <li>20h30 - 1h00</li>
+                                <li>10dt</li>
+                            </ul>
+                            <a href="#" class="btn_2">BOOK</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="single_pricing_part">
+                            <p>FOIRE INTERNATIONALE DE SOUSSE</p>
+                            <h3>Tournoi Free Fire</h3>
                             <ul>
                                 <li>17 avril - 18 avril</li>
                                 <li>20h30 - 1h00</li>
@@ -473,7 +473,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_pricing_part">
                             <p>FOIRE INTERNATIONALE DE SOUSSE</p>
-                            <h3>Tournoi Valorant</h3>
+                            <h3>Samara</h3>
                             <ul>
                                 <li>18 avril - 19 avril</li>
                                 <li>20h30 - 1h00</li>
@@ -485,11 +485,11 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_pricing_part">
                             <p>FOIRE INTERNATIONALE DE SOUSSE</p>
-                            <h3>Jenjoon</h3>
+                            <h3>Redstar</h3>
                             <ul>
                                 <li>19 avril - 20 avril</li>
                                 <li>20h30 - 1h00</li>
-                                <li>10dt</li>
+                                <li>25dt</li>
                             </ul>
                             <a href="#" class="btn_2">BOOK</a>
                         </div>
@@ -498,6 +498,18 @@
                         <div class="single_pricing_part">
                             <p>FOIRE INTERNATIONALE DE SOUSSE</p>
                             <h3>Sanfara</h3>
+                            <ul>
+                                <li>20 avril - 21 avril</li>
+                                <li>20h30 - 1h00</li>
+                                <li>25dt</li>
+                            </ul>
+                            <a href="#" class="btn_2">BOOK</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="single_pricing_part">
+                            <p>FOIRE INTERNATIONALE DE SOUSSE</p>
+                            <h3>Jenjoon</h3>
                             <ul>
                                 <li>20 avril - 21 avril</li>
                                 <li>20h30 - 1h00</li>
