--- a/team.html
+++ b/team.html
@@ -1,3 +1,7 @@
+
+<!-- SUPPOSED TO BE ACTIVITIES PAGE -->
+
+
 <!doctype html>
 <html lang="zxx">
 
@@ -47,30 +51,31 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">fighter</a>
+                                        <a class="nav-link" href="fighter.html">Sponsors</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="team.html">team</a>
+                                        <a class="nav-link" href="team.html">Activities</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            Blog
+                                            Tournements
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="blog.html"> blog</a>
-                                            <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                        </div>
+                                            <a class="dropdown-item" href="blog.html"> Fifa</a>
+                                            <a class="dropdown-item" href="single-blog.html">Valorant</a>
+                                            <a class="dropdown-item" href="blog.html"> Free Fire</a>
+                                          </div>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            pages
+                                            Last Events
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
+                                            <a class="dropdown-item" href="elements.html">TGS 2023</a>
                                         </div>
                                     </li>
                                     <li class="nav-item">
@@ -78,7 +83,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <a href="#" class="btn_1 d-none d-sm-block">Register Now</a>
                         </nav>
                     </div>
                 </div>
@@ -93,7 +98,7 @@
                     <div class="col-lg-12">
                         <div class="breadcrumb_iner text-center">
                             <div class="breadcrumb_iner_item">
-                                <h2>Team Matches</h2>
+                                <h2>Activities</h2>
                             </div>
                         </div>
                     </div>
@@ -142,7 +147,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <h2>Latest War Fight</h2>
+                            <h2>Latest Activities</h2>
                         </div>
                     </div>
                 </div>
@@ -153,19 +158,19 @@
                                 <div class="col-lg-6">
                                     <div class="single_war_text text-center">
                                         <img src="img/favicon.png" alt="">
-                                        <h4>Open War chalange</h4>
-                                        <p>27 june , 2020</p>
-                                        <a href="#">view fight</a>
+                                        <h4>Valorant Tournement</h4>
+                                        <p>19 Avril , 2023</p>
+                                        <a href="#">View Highlights</a>
                                         <div class="war_text_item d-flex justify-content-around align-items-center">
                                             <img src="img/war_logo_1.png" alt="">
-                                            <h2>190<span>vs</span>189</h2>
+                                            <h2>equipe1<span>vs</span>equipe2</h2>
                                             <img src="img/war_logo_2.png" alt="">
                                         </div>
 
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="btn_2">Watch Tutorial</a>
+                            <a href="#" class="btn_2">Watch Highlights</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
