--- a/contact.html
+++ b/contact.html
@@ -45,28 +45,29 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fighter.html">fighter</a>
+                  <a class="nav-link" href="fighter.html">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="team.html">team</a>
+                  <a class="nav-link" href="team.html">Activities</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Blog
+                    Tournements
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="blog.html"> blog</a>
-                    <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                    <a class="dropdown-item" href="blog.html"> Fifa</a>
+                    <a class="dropdown-item" href="single-blog.html">Valorant</a>
+                    <a class="dropdown-item" href="blog.html"> Free Fire</a>
                   </div>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    pages
+                    Last Events
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                    <a class="dropdown-item" href="elements.html">Elements</a>
+                    <a class="dropdown-item" href="elements.html">TGS 2023</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -74,7 +75,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+            <a href="#" class="btn_1 d-none d-sm-block">Register Now</a>
           </nav>
         </div>
       </div>
@@ -186,7 +187,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Buttonwood, California.</h3>
+              <h3>Sousse.</h3>
               <p>Rosemead, CA 91770</p>
             </div>
           </div>
@@ -200,7 +201,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3>support@colorlib.com</h3>
+              <h3>TGS@gmail.com</h3>
               <p>Send us your query anytime!</p>
             </div>
           </div>
