--- a/single-blog.html
+++ b/single-blog.html
@@ -1,3 +1,7 @@
+
+
+<!-- SUPPOSED TO BE Valorant TOURNEMENT  PAGE -->
+
 <!doctype html>
 <html lang="zxx">
 
@@ -41,45 +45,47 @@
                   </button>
                   <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                           <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="fighter.html">fighter</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="team.html">team</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Blog
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="blog.html"> blog</a>
-                              <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                           </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              pages
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                              <a class="dropdown-item" href="elements.html">Elements</a>
-                           </div>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="index.html">Home</a>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="fighter.html">Sponsors</a>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="team.html">Activities</a>
+                         </li>
+                         <li class="nav-item dropdown">
+                             <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
+                                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                 Tournements
+                             </a>
+                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                 <a class="dropdown-item" href="blog.html"> Fifa</a>
+                                 <a class="dropdown-item" href="single-blog.html"> Valorant</a>
+                                 <a class="dropdown-item" href="blog.html"> Free Fire</a>
+                                 
+                             </div>
+                         </li>
+                         <li class="nav-item dropdown">
+                             <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
+                                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                 Last Events
+                             </a>
+                             <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                 <a class="dropdown-item" href="elements.html">TGS 2023</a>
+                             </div>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="contact.html">Contact</a>
+                         </li>
                      </ul>
-                  </div>
-                  <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
-               </nav>
-            </div>
+                 </div>
+                 <a href="#" class="btn_1 d-none d-sm-block">Register Now</a>
+             </nav>
          </div>
-      </div>
-   </header>
+     </div>
+ </div>
+</header>
    <!-- Header part end-->
 
    <!-- breadcrumb start-->
@@ -89,7 +95,7 @@
             <div class="col-lg-12">
                <div class="breadcrumb_iner text-center">
                   <div class="breadcrumb_iner_item">
-                     <h2>blog details</h2>
+                     <h2>Valorant Tournement</h2>
                   </div>
                </div>
             </div>
@@ -108,42 +114,38 @@
                      <img class="img-fluid" src="img/blog/single_blog_1.png" alt="">
                   </div>
                   <div class="blog_details">
-                     <h2>Second divided from form fish beast made every of seas
-                        all gathered us saying he our
+                     <h2>Valorant Tournement Winners Got 20000 Dt Cashprize
                      </h2>
                      <ul class="blog-info-link mt-3 mb-4">
-                        <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
+                        <li><a href="#"><i class="far fa-user"></i> Team, Member</a></li>
                         <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
                      </ul>
                      <p class="excert">
-                        MCSE boot camps have its supporters and its detractors. Some people do not understand why you
-                        should have to spend money on boot camp when you can get the MCSE study materials yourself at a
-                        fraction of the camp price. However, who has the willpower
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum neque pariatur ab eaque dicta,
+                        suscipit ipsum assumenda! Corrupti saepe quas tempora molestias possimus eum aut assumenda, 
+                        sequi deserunt. Voluptatibus, praesentium?
                      </p>
                      <p>
-                        MCSE boot camps have its supporters and its detractors. Some people do not understand why you
-                        should have to spend money on boot camp when you can get the MCSE study materials yourself at a
-                        fraction of the camp price. However, who has the willpower to actually sit through a
-                        self-imposed MCSE training. who has the willpower to actually
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum neque pariatur ab eaque dicta,
+                        suscipit ipsum assumenda! Corrupti saepe quas tempora molestias possimus eum aut assumenda, 
+                        sequi deserunt. Voluptatibus, praesentium?
                      </p>
                      <div class="quote-wrapper">
                         <div class="quotes">
-                           MCSE boot camps have its supporters and its detractors. Some people do not understand why you
-                           should have to spend money on boot camp when you can get the MCSE study materials yourself at
-                           a fraction of the camp price. However, who has the willpower to actually sit through a
-                           self-imposed MCSE training.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum neque pariatur ab eaque dicta,
+                        suscipit ipsum assumenda! Corrupti saepe quas tempora molestias possimus eum aut assumenda, 
+                        sequi deserunt. Voluptatibus, praesentium?
                         </div>
                      </div>
                      <p>
-                        MCSE boot camps have its supporters and its detractors. Some people do not understand why you
-                        should have to spend money on boot camp when you can get the MCSE study materials yourself at a
-                        fraction of the camp price. However, who has the willpower
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum neque pariatur ab eaque dicta,
+                        suscipit ipsum assumenda! Corrupti saepe quas tempora molestias possimus eum aut assumenda, 
+                        sequi deserunt. Voluptatibus, praesentium?
                      </p>
                      <p>
-                        MCSE boot camps have its supporters and its detractors. Some people do not understand why you
-                        should have to spend money on boot camp when you can get the MCSE study materials yourself at a
-                        fraction of the camp price. However, who has the willpower to actually sit through a
-                        self-imposed MCSE training. who has the willpower to actually
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum neque pariatur ab eaque dicta,
+                        suscipit ipsum assumenda! Corrupti saepe quas tempora molestias possimus eum aut assumenda, 
+                        sequi deserunt. Voluptatibus, praesentium?
                      </p>
                   </div>
                </div>
@@ -209,7 +211,7 @@
                      <img src="img/blog/author.png" alt="">
                      <div class="media-body">
                         <a href="#">
-                           <h4>Harvard milan</h4>
+                           <h4>Flen Foulen</h4>
                         </a>
                         <p>Second divided from form fish beast made. Every of seas all gathered use saying you're, he
                            our dominion twon Second divided from</p>
