--- a/index.html
+++ b/index.html
@@ -219,12 +219,13 @@
                                         <h4>Fifa Tournement</h4>
                                         <p>20 Avril , 2023</p>
                                         <a href="#">view match</a>
+                                        <br>
                                         <div class="war_text_item d-flex justify-content-around align-items-center">
                                             <img src="img/war_logo_1.png" alt="">
-                                            <h2>Flen<span>vs</span>Foulen</h2>
+                                            <h2>Valorant<span>and</span>Fifa</h2>
                                             <img src="img/war_logo_2.png" alt="">
                                         </div>
-
+                                        <br>
                                     </div>
                                 </div>
                             </div>
@@ -531,27 +532,20 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <a href="index.html" class="footer_logo_iner"> <img src="img/logo.png" alt="#"> </a>
-                                <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
-                                    days
-                                    open
-                                </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Contact Info</h4>
-                                <p>Address : Your address goes
-                                    here, your demo address.
-                                    Bangladesh.</p>
-                                <p>Phone : +8880 44338899</p>
-                                <p>Email : info@colorlib.com</p>
+                                <p>Address : 78 rue mongi slim , Tunis, Tunisia</p>
+                                <p>Phone : +216 55 200 999</p>
+                                <p>Email : stepromexpo@gmail.com</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Important Link</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href=""> WHMCS-bridge</a></li>
                                     <li><a href="">Search Domain</a></li>
                                     <li><a href="">My Account</a></li>
                                     <li><a href="">Shopping Cart</a></li>
@@ -559,13 +553,10 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-3"> 
                             <div class="single_footer_part">
                                 <h4>Newsletter</h4>
-                                <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold
-                                    bearing
-                                    days
-                                    open
+                                <p>Join our community and be the first to hear about our latest news, product launches, and exclusive offers! Simply enter your email address below and hit subscribe
                                 </p>
                                 <div id="mc_embed_signup">
                                     <form target="_blank"
