--- a/team.html
+++ b/team.html
@@ -345,27 +345,20 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <a href="index.html" class="footer_logo_iner"> <img src="img/logo.png" alt="#"> </a>
-                                <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
-                                    days
-                                    open
-                                </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Contact Info</h4>
-                                <p>Address : Your address goes
-                                    here, your demo address.
-                                    Bangladesh.</p>
-                                <p>Phone : +8880 44338899</p>
-                                <p>Email : info@colorlib.com</p>
+                                <p>Address : 78 rue mongi slim , Tunis, Tunisia</p>
+                                <p>Phone : +216 55 200 999</p>
+                                <p>Email : stepromexpo@gmail.com</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Important Link</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href=""> WHMCS-bridge</a></li>
                                     <li><a href="">Search Domain</a></li>
                                     <li><a href="">My Account</a></li>
                                     <li><a href="">Shopping Cart</a></li>
@@ -373,13 +366,10 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-3"> 
                             <div class="single_footer_part">
                                 <h4>Newsletter</h4>
-                                <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold
-                                    bearing
-                                    days
-                                    open
+                                <p>Join our community and be the first to hear about our latest news, product launches, and exclusive offers! Simply enter your email address below and hit subscribe
                                 </p>
                                 <div id="mc_embed_signup">
                                     <form target="_blank"
@@ -405,9 +395,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <div class="copyright_text">
-                                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                                
                             </div>
                         </div>
                         <div class="col-lg-4">
