--- a/index.html
+++ b/index.html
@@ -220,11 +220,7 @@
                                         <p>20 Avril , 2023</p>
                                         <a href="#">view match</a>
                                         <br>
-                                        <div class="war_text_item d-flex justify-content-around align-items-center">
-                                            <img src="img/war_logo_1.png" alt="">
-                                            <h2>Valorant<span>and</span>Fifa</h2>
-                                            <img src="img/war_logo_2.png" alt="">
-                                        </div>
+                                        <
                                         <br>
                                     </div>
                                 </div>
@@ -237,10 +233,9 @@
                             <div class="single_war_text">
                                 <div class="war_text_item d-flex justify-content-around align-items-center">
                                     <img src="img/war_logo_1.png" alt="">
-                                    <h2>Team<span>vs</span>Team</h2>
+                                    <h2>GUCCI Gang<span>vs</span>Association Esports Sfax</h2>
                                     <img src="img/war_logo_2.png" alt="">
                                     <div class="war_date">
-                                        <a href="#">20 Avril 2023</a>
                                         <p>Valorant Tournement</p>
                                     </div>
                                 </div>
@@ -249,11 +244,10 @@
                             <div class="single_war_text">
                                 <div class="war_text_item d-flex justify-content-around align-items-center">
                                     <img src="img/war_logo_1.png" alt="">
-                                    <h2>Team <span>vs</span>Team</h2>
+                                    <h2>Club sportif Hilalien <span>vs</span>GNG Esports</h2>
                                     <img src="img/war_logo_2.png" alt="">
                                     <div class="war_date">
-                                        <a href="#">20 Avril 2023</a>
-                                        <p>Free Fire Tournement</p>
+                                        <p>Valorant Tournement</p>
                                     </div>
                                 </div>
                             </div>
@@ -263,7 +257,6 @@
                                     <h2>Team<span>vs</span>Team</h2>
                                     <img src="img/war_logo_2.png" alt="">
                                     <div class="war_date">
-                                        <a href="#">20 Avril 2023</a>
                                         <p>Fifa Tournement</p>
                                     </div>
                                 </div>
